<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Untouchable</string>
    <string name="action_settings">Settings</string>
    <string name="menu_start">Start Game</string>
    <string name="menu_options">Options</string>
    <string name="menu_scores">High Scores</string>
    <string name="instructions">Instructions go here. Instructions go here. Instructions go here. Instructions go here. Instructions go here. Instructions go here.</string>
    <string name="confirm">OK</string>
    <string name="done">Return to Main Menu</string>
    <string name="hard">Hard</string>
    <string name="normal">Normal</string>
    <string name="easy">Easy</string>
    <string name="difficulty">Select Difficulty</string>
    <string name="game_over">Game Over</string>
    <string name="level">Level:</string>
    <string name="score">Score: </string>
    
    <string-array name="difficulties" >
        <item>@string/easy</item>
        <item>@string/normal</item>
        <item>@string/hard</item>
    </string-array>
        
</resources>
