<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent" >

    <Button
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/normal"
        android:textColor="@color/white"
        android:text="@string/hard"
        android:onClick="onClick" />

    <Button
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:text="@string/easy"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/easy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp"
        android:text="@string/difficulty"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/easy"
        android:textColor="@color/white"
        android:text="@string/normal" 
        android:onClick="onClick" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/done"
        android:textColor="@color/white"
        android:onClick="onClick" />

</RelativeLayout>
