<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/instructButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/menu_instructions"
        android:textColor="@color/white"
        android:onClick="onClickInstruct" />

    <Button
        android:id="@+id/scoresButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructButton"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textColor="@color/white"
        android:text="@string/menu_scores"
        android:onClick="onClickScores" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold|italic" />
    
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:textColor="@color/white"
        android:text="@string/menu_start"
        android:onClick="onClickStart" />

</RelativeLayout>